<resources>
    <string name="app_name">RomainPlayer</string>
    <string name="title_activity_playlist">Playlist</string>

    <string name="dialog_playlist_title">Créer une playlist</string>
    <string name="dialog_playlist_hint">Nom de la playlist</string>

    <string name="dialog_playlist_delete_name">Suppression d\'une playlist</string>
    <string name="dialog_playlist_confirm">Voulez-vous vraiment supprimer la playlist %1$s ?</string>
    <string name="dialog_playlist_edit_name">Modification d\'une playlist</string>

    <string name="dialog_music_delete_name">Suppression d\'une musique</string>
    <string name="dialog_music_confirm">Voulez-vous vraiment supprimer %1$s de la playlist ?</string>
    <string name="dialog_music_edit_name">Modification d\'une musique</string>

    <string name="chooser_music_title">Ajout d\'une musique</string>

    <string name="desc_home_picture">Logo</string>
    <string name="desc_add_button">Ajouter</string>
    <string name="desc_player_picture">Preview de la musique</string>
    <string name="desc_pause_button">Pause</string>
    <string name="desc_shuffle_button">Aléatoire</string>
    <string name="desc_edit_button">Éditer</string>
    <string name="desc_delete_button">Supprimer</string>

    <string name="no_result">Aucun résultat</string>

    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="previous">Précédent</string>
    <string name="next">Suivant</string>

    <string name="hint_create_playlist">Créer une playlist</string>
    <string name="hint_detail_playlist">Détails d\'un élément</string>
    <string name="hint_shuffle_playlist">Sélectionne une musique aléatoire</string>
    <string name="hint_add_music">Ajoute une musique</string>
    <string name="hint_music_title">Titre de la musique</string>

    <string name="warn_empty_playlist">Playlist vide</string>
    <string name="warn_no_permissions">Cette application nécessite des permissions pour continuer</string>
    <string name="warn_empty_name">Nom vide</string>

    <string name="err_null_id">ID null</string>
    <string name="err_null_playlist">Playlist nulle</string>
    <string name="err_general">Erreur</string>
</resources>
