<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/item_preview"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.25"
        android:src="@drawable/ic_playlist_preview"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/desc_player_picture" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.5"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <ImageView
        android:id="@+id/item_edit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_weight="1.3"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/desc_edit_button" />

    <ImageView
        android:id="@+id/item_delete_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_weight="1.3"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/desc_delete_button" />
</LinearLayout>
