<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/item_preview"
        android:layout_marginStart="@dimen/item_list_image_margin"
        android:layout_marginEnd="@dimen/item_list_image_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="@integer/item_list_image_weight"
        android:src="@drawable/ic_playlist_preview"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/desc_player_picture" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_list_text_size"
        android:layout_marginTop="@dimen/item_list_text_margin"
        android:layout_weight="@integer/item_list_text_weight"
        android:textSize="@dimen/item_list_text_size"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <ImageView
        android:id="@+id/item_edit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/item_list_button_padding"
        android:layout_weight="@integer/item_list_button_weight"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/desc_edit_button" />

    <ImageView
        android:id="@+id/item_delete_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/item_list_button_padding"
        android:layout_weight="@integer/item_list_button_weight"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/desc_delete_button" />
</LinearLayout>
