<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlaylistActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_marginTop="@dimen/playlist_margin_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/search_bar_music"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/no_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/no_result_text_size"
                android:padding="@dimen/no_result_padding"
                android:paddingStart="@dimen/no_result_padding_side"
                android:paddingEnd="@dimen/no_result_padding_side"
                android:text="@string/no_result" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_shuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/floating_button_side_offset"
        android:tint="@android:color/white"
        android:src="@drawable/ic_shuffle"
        android:contentDescription="@string/desc_shuffle_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/floating_button_side_offset"
        android:tint="@android:color/white"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/desc_add_button" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
