<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_logo_height"
            android:orientation="horizontal">

            <fr.r_thd.player.view.GifView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/desc_home_picture" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_divider"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/search_bar_playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/no_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/no_result_text_size"
                android:padding="@dimen/no_result_padding"
                android:paddingStart="@dimen/no_result_padding_side"
                android:paddingEnd="@dimen/no_result_padding_side"
                android:text="@string/no_result" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playlist_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/floating_button_side_offset"
        android:tint="@android:color/white"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/desc_add_button" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
