<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MusicPlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/music_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textFontWeight="30"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:baselineAligned="false">

            <ImageView
                android:id="@+id/music_picture_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_no_preview"
                android:contentDescription="@string/desc_player_picture" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="0.5"
                    android:visibility="invisible"/>

                <SeekBar
                    android:id="@+id/volume_seek_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="0.5"
                    android:visibility="invisible"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_previous"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:text="@string/previous" />

                <TextView
                    android:id="@+id/title_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:ellipsize="end"
                    android:maxLength="24"
                    android:maxLines="1" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.25" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:text="@string/next" />

                <TextView
                    android:id="@+id/title_next"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:ellipsize="end"
                    android:maxLength="24"
                    android:maxLines="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="56dp"
        android:tint="@android:color/white"
        android:src="@drawable/ic_play"
        android:contentDescription="@string/desc_pause_button" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
